# tiktok-saver

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  browser.py  claude_yt_dlp.py  pyproject.toml  test.py  tiktok_saved_videos.txt  tt_dl_db.py
.github/: CODEOWNERS
src/: __init__.py  browser.py  collection_links_download.js  fetch_metadata.py  sqlite.py  store_metadata.py  transcode_videos.py  tt_dl_db.py
src/utils/: __init__.py  download_video.py  pathing.py
tests/: test_cli.py  test_download.py  test_embed.py  test_enumerate.py  test_manifest.py  test_mapping.py  test_reconcile.py  test_transcribe.py  test_wiki.py
tiktok_saver/: __init__.py  cli.py  download.py  embed.py  enumerate.py  frames.py  manifest.py  mapping.py  reconcile.py  session.py  transcribe.py  wiki.py
