[project]
name = "tiktok-saver"
version = "0.2.0"
description = "Durable first-party export of your own TikTok Collections, Favorites (saved) and Likes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.48",
    "yt-dlp>=2026.3.17",
    "gallery-dl>=1.28",
    "curl_cffi>=0.7",
]

[project.scripts]
tiktok-saver = "tiktok_saver.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiktok_saver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
